--- a/enforce-extended-resource-limits-pods.yaml
+++ b/enforce-extended-resource-limits-pods.yaml
@@ -10,9 +10,10 @@ spec:
   rules:
     - name: enforce-extended-resource-on-nodes
       match:
-        resources:
-          kinds:
-            - Pod
+        any:
+        - resources:
+            kinds:
+              - Pod
       preconditions:
         all:
           - key: "{{ request.object.spec.nodeName }}"
